@startuml

title __MANAGERS's Class Diagram__\n

  namespace com.eliten.eksamen {
    namespace managers {
      class com.eliten.eksamen.managers.AccountManager {
          - accounts : ArrayList<Account>
          + AccountManager()
          + getLoggedInAccount()
          + login()
          + logout()
          + save()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace managers {
      class com.eliten.eksamen.managers.FileManager {
          + FileManager()
          + getFile()
          + getFileByteArray()
          + getImage()
          + readFiles()
          + saveFile()
          - addGenres()
          - addImage()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace managers {
      class com.eliten.eksamen.managers.MediaManager {
          - medias : ArrayList<Media>
          + MediaManager()
          + addMedia()
          + getMediaByName()
          + getMedias()
          + getMediasBySearch()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace managers {
      class com.eliten.eksamen.managers.ViewManager {
          - currentPage : JPanel
          - mainFont : Font
          + ViewManager()
          + changeView()
          + getCurrentPage()
          + getMainFont()
          + getNavigationBar()
          + isListPage()
          + setCurrentPage()
      }
    }
  }
  

  com.eliten.eksamen.managers.AccountManager o-- com.eliten.eksamen.account.Account : loggedInAccount
  com.eliten.eksamen.managers.ViewManager o-- com.eliten.eksamen.gui.MasterFrame : masterFrame
  com.eliten.eksamen.managers.ViewManager o-- com.eliten.eksamen.gui.NavigationBar : navigationBar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
